tests/errors/complex_01.f90
program complex_01
    implicit none
    complex :: z = (1, 2)
    print *, cmplx(z, 1)
end
